; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_ci_dpm.c_ci_populate_phase_value_based_on_sclk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_ci_dpm.c_ci_populate_phase_value_based_on_sclk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }
%struct.radeon_phase_shedding_limits_table = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.radeon_device*, %struct.radeon_phase_shedding_limits_table*, i64, i64*)* @ci_populate_phase_value_based_on_sclk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ci_populate_phase_value_based_on_sclk(%struct.radeon_device* %0, %struct.radeon_phase_shedding_limits_table* %1, i64 %2, i64* %3) #0 {
  %5 = alloca %struct.radeon_device*, align 8
  %6 = alloca %struct.radeon_phase_shedding_limits_table*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %5, align 8
  store %struct.radeon_phase_shedding_limits_table* %1, %struct.radeon_phase_shedding_limits_table** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64* %3, i64** %8, align 8
  %10 = load i64*, i64** %8, align 8
  store i64 1, i64* %10, align 8
  store i32 0, i32* %9, align 4
  br label %11

11:                                               ; preds = %33, %4
  %12 = load i32, i32* %9, align 4
  %13 = load %struct.radeon_phase_shedding_limits_table*, %struct.radeon_phase_shedding_limits_table** %6, align 8
  %14 = getelementptr inbounds %struct.radeon_phase_shedding_limits_table, %struct.radeon_phase_shedding_limits_table* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp ult i32 %12, %15
  br i1 %16, label %17, label %36

17:                                               ; preds = %11
  %18 = load i64, i64* %7, align 8
  %19 = load %struct.radeon_phase_shedding_limits_table*, %struct.radeon_phase_shedding_limits_table** %6, align 8
  %20 = getelementptr inbounds %struct.radeon_phase_shedding_limits_table, %struct.radeon_phase_shedding_limits_table* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load i32, i32* %9, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp slt i64 %18, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %17
  %29 = load i32, i32* %9, align 4
  %30 = zext i32 %29 to i64
  %31 = load i64*, i64** %8, align 8
  store i64 %30, i64* %31, align 8
  br label %36

32:                                               ; preds = %17
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %9, align 4
  %35 = add i32 %34, 1
  store i32 %35, i32* %9, align 4
  br label %11

36:                                               ; preds = %28, %11
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
